[package]
name = "nintendo64-pac"
authors = ["Isaac Corbrey <icorbrey@gmail.com>"]
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-only"
categories = ["development-tools"]
keywords = ["pac", "nintendo64", "n64", "embedded"]
description = "A peripheral access crate for the Nintendo 64."
repository = "https://github.com/icorbrey/nintendo64-pac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tock-registers = "0.8.1"
