[package]
name = "nintendo64-pac"
authors = ["Isaac Corbrey <icorbrey@gmail.com>"]
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["pac", "nintendo64", "n64", "embedded", "no_std"]
description = "A peripheral access crate for the Nintendo 64."
repository = "https://github.com/icorbrey/nintendo64-pac"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-bitfield = "0.3.0"
ux = "0.1.5"
